settings button alignment fix

--- a/style.css
+++ b/style.css
@@ -308,5 +308,5 @@ span.radio > label {
 
 #title-section .symbolic {
     font-size: 3rem;
-    height: 4rem;
+    height: 6rem;
 }
